--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.12.11",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
@@ -31,7 +32,8 @@
       "@babel/preset-env"
     ],
     "plugins": [
-      "@babel/plugin-transform-runtime","@babel/plugin-syntax-top-level-await"
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-syntax-top-level-await"
     ]
   },
   "nodemonConfig": {
